--- a/basic_feeds.info.yml
+++ b/basic_feeds.info.yml
@@ -3,3 +3,5 @@ type: module
 description: This module renders entities data in json format if found else throws "access denied". Site will have global api key set in for feeds to response.
 core: 8.x
 package: feeds
+# show configuration link in module listing page.
+configure: system.site_information_settings
